--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "meilisearch": "^0.51.0",
+    "mongodb": "^6.18.0",
     "multer": "^2.0.2"
   }
 }
