clean test file

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Server Configuration
-PORT=5000
+PORT=8000
 NODE_ENV=development
 
 # MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=
 DB_NAME=chatnary
 
 # Meilisearch Configuration
@@ -17,6 +17,9 @@ UPLOAD_DIR=uploads
 # LLM API Configuration (for chat feature)
 OPENAI_API_KEY=
 GEMINI_API_KEY=
+
+# JWT Configuration
+JWT_SECRET=
 
 # CORS Configuration
 FRONTEND_URL=http://localhost:3000
